--- a/AminWeb/Views/Shared/_VideoBlock.cshtml
+++ b/AminWeb/Views/Shared/_VideoBlock.cshtml
@@ -3,7 +3,6 @@
 @if (Model != null)
 {
 
-
     <div class="video-block">
         <div class="top">
             <ul class="badges row ">
@@ -19,6 +18,9 @@
                         <img src="~/Resources/Static/Vector/Medal.svg" height="24" width="24" alt="Badge" />
                     </li>
                 }
+                <li class="uk-margin-auto-left" uk-tooltip="title:عضو کلاس">
+                    <img src="~/Resources/Static/Vector/Playlist.svg" height="24" width="24" alt="Badge" />
+                </li>
             </ul>
             <img class="thumbnail" height="200" width="360" src="~/Resources/Video/Image/Thumb/@Model.MainImage" alt="Thumbnail" />
         </div>
