--- a/AminWeb/Content/Styles/Pages/VideoView.scss
+++ b/AminWeb/Content/Styles/Pages/VideoView.scss
@@ -25,26 +25,33 @@
     }
 }
 
-.price {
-    color: #66e828;
-    font-size: 24px;
 
-    span {
-        margin-top: 10px;
-        margin-right: 2px;
-        font-size: 14px;
-    }
+.btn-primary.btn-orange {
+    @include border-radius(8px,8px,8px,8px);
+    @include trans(.2s);
+    @include shadow-more;
+    cursor: pointer;
+    background: rgb(255,202,122);
+    background: -moz-linear-gradient(135deg, rgba(255,202,122,1) 0%, rgba(244,74,74,1) 100%);
+    background: -webkit-linear-gradient(135deg, rgba(255,202,122,1) 0%, rgba(244,74,74,1) 100%);
+    background: linear-gradient(135deg, rgba(255,202,122,1) 0%, rgba(244,74,74,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffca7a",endColorstr="#f44a4a",GradientType=1);
+}
+
+.btn-orange:hover {
+    opacity: .8
 }
 
 .control-panel {
-    @include row-reverse;
+    @include row;
 
     &-top {
-        margin-right: auto !important;
+        margin-right: auto;
 
         .star-container {
             background: #F5F5F5;
             padding: 10px;
+            margin: auto 0;
             @include border-radius(8px,8px,8px,8px);
 
             .rate {
@@ -60,9 +67,38 @@
         }
     }
 
+    .btn {
+        min-width: unset;
+        @include row-reverse;
+        -ms-align-content: center;
+        -webkit-align-content: center;
+        align-content: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        position: relative;
+
+        span {
+            margin: auto 4px;
+        }
+
+        .price {
+            color: #fff;
+            font-size: 18px;
+            margin-top: 4px;
+            margin-right: 4px;
+        }
+
+        .toman {
+            color: #fff;
+            font-size: 10px;
+            margin: 12px 0 0 0
+        }
+    }
+
     .icon-button {
         color: #AFAFAF;
     }
+
 
     .icon-button:hover {
         color: $primary;
@@ -77,7 +113,10 @@
 
 @media only screen and (max-width: 950px) {
     .control-panel {
-        @include column-reverse;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+
 
         &-top {
             margin-right: auto !important;
@@ -85,13 +124,12 @@
 
         &-bottom {
             margin-top: 16px;
+            @include row-reverse;
+            grid-gap: 12px;
 
             .btn-primary {
-                margin-left: auto !important;
-            }
-
-            .price {
-                margin-right: auto !important;
+                margin: 0;
+                width: 100%;
             }
         }
     }
