--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -296,20 +296,32 @@ backdrop-filter: saturate(80%);
   display: none; }
 
 .top-nav {
-  padding: 15px 0 0 0;
+  padding: 7.5px 0 7.5px 0;
   position: fixed;
   width: 100vw;
   z-index: 1000;
-  backdrop-filter: blur(4px); }
+  backdrop-filter: blur(4px);
+  -moz-transition: all ease 0.3s;
+  -o-transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+  transition-property: background-color; }
   .top-nav > nav {
     margin-left: 20px; }
-    .top-nav > nav a {
+    .top-nav > nav > div:not(#loggedInUser) a {
       margin: auto 0;
       margin-right: 16px;
       white-space: nowrap; }
+    .top-nav > nav #loggedInUser {
+      display: flex;
+      flex-direction: column;
+      margin-top: 10px !important; }
   .top-nav > .logo {
     width: 50px;
     margin-right: 24px; }
+
+.top-nav.top-nav-trans {
+  background-color: rgba(248, 248, 248, 0.76); }
 
 a:not(.btn), a:visited, details, summary, .anchor {
   color: #505050;
@@ -360,8 +372,21 @@ a:hover, summary:hover, .active {
       margin: auto 0;
       margin-right: 16px;
       font-size: 14px; }
+    .top-nav > nav #loggedInUser {
+      margin-top: 0 !important; }
   .top-nav > .logo {
     width: 32px;
+    margin-right: 10px; }
+  .bottom-nav {
+    display: block; } }
+
+@media only screen and (max-device-width: 360px) {
+  .top-nav > nav a {
+    margin: auto 0;
+    margin-right: 12px;
+    font-size: 12px; }
+  .top-nav > .logo {
+    width: 28px;
     margin-right: 10px; }
   .bottom-nav {
     display: block; } }
@@ -802,6 +827,33 @@ select {
   /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
     border-radius: 0;*/ }
+
+.playlist-data dt {
+  color: #959595;
+  font-size: 12px;
+  margin-bottom: 2px; }
+
+.playlist-data dd {
+  margin-bottom: 10px; }
+
+.playlist-data .user:after {
+  content: "•";
+  color: #F94646;
+  margin-left: 4px;
+  vertical-align: central; }
+
+.playlist-data .star {
+  color: #ffc300 !important;
+  font-size: 16px;
+  margin-left: auto; }
+  .playlist-data .star svg {
+    margin-left: 4px;
+    margin-bottom: 4px; }
+
+.playlist-data .price {
+  color: #73da42;
+  font-size: 18px !important;
+  font-weight: lighter; }
 
 .uk-notification-message {
   background-color: #fff !important;
