--- a/AminWeb/Content/Styles/Global.css
+++ b/AminWeb/Content/Styles/Global.css
@@ -48,18 +48,17 @@ html {
   html ::-webkit-scrollbar {
     width: 14px; }
   html ::-webkit-scrollbar-track {
-    background: #dedede; }
+    background: transparent;
+    margin: 4px 0; }
   html ::-webkit-scrollbar-thumb {
     background: #c4c4c4;
-    -moz-border-radius: 16px 16px 16px 16px;
-    -webkit-border-radius: 16px 16px 16px 16px;
-    border-radius: 16px 16px 16px 16px;
+    border-right: solid 4px #EDEDED;
+    -moz-border-radius: 6px 8px 8px 6px;
+    -webkit-border-radius: 6px 8px 8px 6px;
+    border-radius: 6px 8px 8px 6px;
     /* -moz-border-radius: 0;
     -webkit-border-radius: 0;
-    border-radius: 0;*/
-    -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-    box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
+    border-radius: 0;*/ }
   html ::-webkit-scrollbar-thumb:hover {
     background: #b0b0b0; }
 
