--- a/AminWeb/Content/Styles/Pages/VideoView.css
+++ b/AminWeb/Content/Styles/Pages/VideoView.css
@@ -192,6 +192,9 @@ backdrop-filter: saturate(80%);
   .container {
     width: 92%; } }
 
+.btn-primary .uk-icon, .btn-orange .uk-icon {
+  min-width: 16px !important; }
+
 .btn-primary.btn-orange {
   -moz-border-radius: 8px 8px 8px 8px;
   -webkit-border-radius: 8px 8px 8px 8px;
@@ -281,3 +284,15 @@ backdrop-filter: saturate(80%);
       .control-panel-bottom .btn-primary {
         margin: 0;
         width: 100%; } }
+
+@media only screen and (max-device-width: 450px) {
+  .control-panel-bottom {
+    grid-gap: 6px; }
+    .control-panel-bottom * + .btn-primary, .control-panel-bottom .btn-primary.btn-orange {
+      padding-left: 12px;
+      padding-right: 12px; }
+      .control-panel-bottom * + .btn-primary span, .control-panel-bottom .btn-primary.btn-orange span {
+        font-size: 13px !important; }
+      .control-panel-bottom * + .btn-primary .toman, .control-panel-bottom .btn-primary.btn-orange .toman {
+        font-size: 7px !important;
+        margin-top: 8px; } }
