--- a/AminWeb/Areas/Admin/Views/Order/Prices.cshtml
+++ b/AminWeb/Areas/Admin/Views/Order/Prices.cshtml
@@ -5,7 +5,7 @@
 
 <div class="flex-column card flex-div border-0 shadow">
     <div class="card-header bg-white">
-        <h4>درصد و سقف برداشت </h4>
+        <h4>درصد و کف برداشت </h4>
     </div>
     @using (Html.BeginForm())
     {
@@ -17,7 +17,7 @@
                 @Html.ValidationMessageFor(model => model.DarsadeSud, "", new { @class = "text-danger" })
             </div>
 
-            <label>سقف</label>
+            <label>کف برداشت</label>
             <div class="form-group mt-1 mx-sm-1 mb-3">
                 @Html.EditorFor(model => model.SaqfeBardasht, new { htmlAttributes = new { @class = "form-control form-control-sm", placeholder = " سقف برداشت" } })
                 @Html.ValidationMessageFor(model => model.SaqfeBardasht, "", new { @class = "text-danger" })
