--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@
                         <li class="nav-item active">
                             <a href="/Admin/Doc">
                                 <span class="icon-holder">
-                                    <i class="fas fa-user"></i>
+                                    <i class="fas fa-info"></i>
                                 </span>
                                 <span class="title"> اطلاعات ارسالی کاربران</span>
                             </a>
@@ -161,7 +161,7 @@
                                 <span class="icon-holder">
                                     <i class="fas fa-ticket-alt"></i>
                                 </span>
-                                <span class="title">تیکت ها</span>
+                                <span class="title"> پیام ادمین</span>
                             </a>
                         </li>
                         <li class="nav-item active">
