--- a/AminWeb/Views/Shared/_VideoBlock.cshtml
+++ b/AminWeb/Views/Shared/_VideoBlock.cshtml
@@ -4,7 +4,7 @@
 {
 
     <div class="video-block">
-        <div class="top">
+        <a class="top" href="/VideoView/@Model.VideoId/@Model.Title.Replace(" ","-")" >
             <ul class="badges row ">
                 @if (Model.TblUser.RoleId == 2)
                 {
@@ -26,7 +26,7 @@
                 }
             </ul>
             <img class="thumbnail" height="200" width="360" src="~/Resources/Video/Image/Thumb/@Model.MainImage" alt="Thumbnail" />
-        </div>
+        </a>
         <div class="text column">
             <div class="content column">
                 <a href="/VideoView/@Model.VideoId/@Model.Title.Replace(" ","-")" class="title">
