--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -159,7 +159,7 @@
                         <li class="nav-item active">
                             <a href="/Admin/Ticket">
                                 <span class="icon-holder">
-                                    <i class="fas fa-ticket-alt"></i>
+                                    <i class="fas fa-envelope pr-1"></i>
                                 </span>
                                 <span class="title"> پیام ادمین</span>
                             </a>
@@ -199,27 +199,10 @@
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#">
-                                            <i class="fas fa-cog pr-1"></i>
-                                            <span>تنظیمات</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fas fa-user pr-1"></i>
-                                            <span>پروفایل</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <i class="fas fa-envelope pr-1"></i>
-                                            <span>پیام</span>
-                                        </a>
-                                    </li>
+
                                     <li role="separator" class="divider"></li>
                                     <li>
-                                        <a href="#">
+                                        <a href="/LogOff">
                                             <i class="fas fa-power-off pr-1"></i>
                                             <span>خروج</span>
                                         </a>
